# Chomp

./: CMakeLists.txt  gui.cpp  gui.h  main.cpp  player.cpp  player.h  robot.cpp  robot.h  utils.h
data/: states_12.txt
src/private/: gui.cpp  main.cpp  player.cpp  robot.cpp
src/public/: player.h  robot.h  utils.h
